--- a/frontend/register.html
+++ b/frontend/register.html
@@ -36,6 +36,12 @@
                     <textarea id="address" name="address" rows="3"></textarea>
                 </div>
                 <div class="form-group">
+                    <label>
+                        <input type="checkbox" id="isAdmin" name="isAdmin">
+                        Register as Admin
+                    </label>
+                </div>
+                <div class="form-group">
                     <button type="submit" class="btn btn-primary">Register</button>
                 </div>
             </form>
@@ -47,5 +53,28 @@
     </div>
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
+    <script>
+        document.getElementById('registerForm')?.addEventListener('submit', async function(e) {
+            e.preventDefault();
+            const data = {
+                name: this.name.value,
+                email: this.email.value,
+                password: this.password.value,
+                phone: this.phone.value,
+                address: {
+                    street: '', city: '', zipCode: '', country: ''
+                }
+            };
+            if (this.address) data.address.street = this.address.value;
+            if (this.isAdmin && this.isAdmin.checked) data.role = 'admin'; // <-- Add this line
+            const res = await apiRequest('/auth/register', 'POST', data);
+            if (res.token) {
+                localStorage.setItem('token', res.token);
+                window.location.href = 'index.html';
+            } else {
+                alert(res.message || res.errors?.[0]?.msg || 'Registration failed');
+            }
+        });
+    </script>
 </body>
 </html>
