--- a/frontend/product-details.html
+++ b/frontend/product-details.html
@@ -38,6 +38,9 @@
             <div class="product-details" id="productDetails">
                 <!-- Product details will be loaded here -->
             </div>
+            <div class="reviews-section" id="reviewsSection">
+                <!-- Reviews and form will be loaded here -->
+            </div>
         </div>
     </main>
 
