stripe payment gateway setup

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -14,6 +14,11 @@
             <div class="nav-logo">
                 <h2><a href="index.html">E-Store</a></h2>
             </div>
+            <div class="nav-menu">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="cart.html" class="nav-link">Cart</a>
+                <a href="admin.html" class="nav-link" style="display:none;">Admin</a>
+            </div>
             <div class="nav-actions">
                 <div class="user-menu" id="userMenu">
                     <div class="user-info" id="userInfo" style="display: none;">
