--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,6 +132,11 @@
             }
         }
         showUserInfo();
+
+        // Navigate to cart page when cart icon is clicked
+        document.getElementById('cartIcon')?.addEventListener('click', function() {
+            window.location.href = 'cart.html';
+        });
     </script>
 </body>
 </html>
