add cart summary element and update visibility logic in loadCart function

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -41,7 +41,7 @@
                 <div class="cart-items" id="cartItems">
                     <!-- Cart items will be loaded here -->
                 </div>
-                <div class="cart-summary">
+                <div class="cart-summary" id="cartSummary">
                     <h3>Order Summary</h3>
                     <div class="summary-row">
                         <span>Subtotal:</span>
